--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,6 +1,3 @@
-$green-border: #3eb489;
-$button-color: #2d68a4;
-$button-hover-color: #235f8a;
 
 * {
   box-sizing: border-box;
@@ -10,84 +7,39 @@ $button-hover-color: #235f8a;
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #ffffff;
   height: 100vh;
 }
 
-.container {
+button {
+  background-color: #2d68a4;
+  &:hover {
+    background-color: #235f8a;
+  }
+}
+label {
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+  display: block;
+}
+
+input[type="number"] {
+  font-size: 1.2rem;
+  padding: 8px;
+  width: 100%;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+header {
+  width: 100%;
+  position: absolute;
+}
+
+.page {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-}
-
-.modal {
-  background-color: #fff;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
-  width: 750px;
-  padding: 20px;
-  position: relative;
-  height: 264px;
-}
-
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-
-  h2 {
-    font-size: 24px;
-  }
-
-  .close-btn {
-    font-size: 20px;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-}
-
-.modal-body {
-  margin-bottom: 20px;
-
-  label {
-    display: block;
-    margin-bottom: 8px;
-    font-size: 14px;
-    color: #6c6c6c;
-  }
-
-  input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-}
-
-.modal-footer {
-  display: flex;
-  justify-content: flex-end;
-  gap: 10px;
-
-  .calc-btn,
-  .gen-btn {
-    padding: 10px 15px;
-    font-size: 14px;
-    color: white;
-    background-color: $button-color;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-
-    &:hover {
-      background-color: $button-hover-color;
-    }
-  }
 }
