--- a/src/components/passwordGenerator/passwordGenerator.module.scss
+++ b/src/components/passwordGenerator/passwordGenerator.module.scss
@@ -71,8 +71,11 @@
 .copyButton {
   width: 24px;
   height: 24px;
-  background-color: transparent;
   border: none;
   cursor: pointer;
   font-size: 1.5rem;
+  background-color: transparent;
+  &:hover {
+    background-color: transparent;
+  }
 }
